@@ -1,3 +1,9 @@
+2015-07-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/model/action_sequence_description.h:
+	* src/model/action_sequence_log_parser.cpp:
+	- 行動列ログ内でのパスのキック回数に対応
+
 2015-07-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/action_sequence_selector.cpp:
